fix bad aligned signup container, centered again

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ ul {
     padding-bottom:70px;
     gap:70px;
     height:500px;
-    margin-top:150px;
+    margin-top:100px;
 }
 
 .welcome-area .text h1 {
@@ -152,6 +152,7 @@ ul {
 	1px -1px 0 #000,
 	-1px 1px 0 #000,
 	1px 1px 0 #000;
+    margin-top:-20px;
 }
 
 .bluetext {
@@ -193,6 +194,11 @@ ul {
 
 
 /*-------SIGNUP--------*/
+
+.signupsection {
+    display:flex;
+    justify-content:center;
+}
 
 .signupcontainer {
     display:flex;
